@@ -13,6 +13,7 @@ Models API:
 
 Core:
 - Drop support of Win32/x86 version.
+- Added TP-dependent mass diffusion coefficient to MDB.
 
 Documentation:
 
